@@ -15,3 +15,8 @@
 .tryxpath--element----f43c83f3-1920-4222-a721-0cc19c4ba9bf.tryxpath--focused----f43c83f3-1920-4222-a721-0cc19c4ba9bf {
     outline: solid thick rgb(0,255,0) !important;
 }
+
+.tryxpath--focused-ancestor----f43c83f3-1920-4222-a721-0cc19c4ba9bf,
+.tryxpath--element----f43c83f3-1920-4222-a721-0cc19c4ba9bf..tryxpath--focused-ancestor----f43c83f3-1920-4222-a721-0cc19c4ba9bf {
+    outline: dashed thick rgb(255,255,0) !important;
+}
